--- a/CheckoutDetailing/cart.css
+++ b/CheckoutDetailing/cart.css
@@ -141,3 +141,6 @@ margin-left: 68%
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
+#displayItem{
+    width: 100%;
+}
