--- a/landing_page/index.css
+++ b/landing_page/index.css
@@ -260,6 +260,7 @@ a {
 }
 
 #card > #btn {
+  cursor: pointer;
   background-color: #0071dc;
   padding: 10px;
   color: white;
@@ -455,6 +456,7 @@ button:hover {
   border: 0px;
   margin-top: -40px;
   margin-left: 20px;
+  cursor: pointer;
   display: inline-block;
 }
 
