--- a/css/productDetail.css
+++ b/css/productDetail.css
@@ -23,7 +23,8 @@
     margin-left: 8%;
     margin-top: 3%;
     height:600px;
-    
+    /* border: 1px solid red; */
+    overflow: hidden;
 }
 #div3{
     /* border:1px solid green; */
@@ -31,8 +32,8 @@
     height:auto;
     margin-left: 3%;
     margin-top:3%;
-    border-radius: 7px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 #rollback{
@@ -82,14 +83,27 @@ h1{
 }
 
 #bt3{
-    padding:10px;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    padding:12px;
     margin-left: 3%;
     border-radius: 19px;
     width:34%;
-    background-color: blue;
+    background-color:#0071dc;
     color:white;
     border:none;
+    height: 40px;
 
+}
+#bt3 > button , #bt3 > div{
+    margin-left: 12px;
+    width: 20px;
+    color: white;
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
 }
 #carDiv,#locDiv,#storeDiv,#giftDiv{
     
@@ -97,7 +111,8 @@ h1{
     flex-direction: row;
 }
 #carImg,#locImg,#deliImg{
-    width:7%;
+    width:30px;
+    margin-left: 5px;
 }
 
 #parentDiv{
@@ -111,23 +126,27 @@ h1{
     margin-top:-4%;
 }
 #giftImg,#giftImg1{
-    width:4%;
+    width:20px;
+    height: 30px;
     padding: 4px;
+    margin-left: 5px;
 }
 /* #giftImg1{
     margin-left:1%;
 } */
 #giftTag,#giftTag1{
     margin-left: 2%;
+    margin-top: 7px;
 }
 
 #ebit{
-    width:15%;
-    background-color: blue;
-    height:30px;
+    width:10%;
+    background-color:#2d4a93;
+    height:20px;
+    border-radius: 2px;
     color:white;
     border:none;
-    margin-top: 2%;
+    margin-top: 4%;
     /* padding:5px; */
 }
 #ebtDiv{
@@ -136,10 +155,10 @@ h1{
     flex-direction: row;
 }
 
-#parentBox{
+#specificationBox{
     /* border:1px solid black; */
     width:100%;
-    height:600px;
+    height:auto;
     display:flex;
     flex-direction: row;
 }
@@ -150,8 +169,8 @@ h1{
     margin-top: 1%;
     /* padding:px; */
 }
-nTag{
-    margin-top:1%;
+.nTag{
+    margin-top:0%;
 }
 #Box{
     width:25%;
@@ -188,7 +207,7 @@ nTag{
     height:auto;
     margin-left: 37%;
     padding:7px;
-    background-color: blue;
+    background-color:#0071dc;
     color:white;
     border:none;
 }
@@ -198,7 +217,53 @@ nTag{
     height:auto;
     margin:auto;
 }
+#div1 > img{
+    width: 100%;
+    cursor: pointer;
+}
 
+#cocImg:hover {
+    -ms-transform: scale(1.5); /* IE 9 */
+    -webkit-transform: scale(1.5); /* Safari 3-8 */
+    transform: scale(1.7);
+    cursor:move;
+    
+  }
+  .dropDown{
+    display: flex;
+    flex-direction: row;
+    width:90%;
+    height:40px; 
+  }
+  .dropImg{
+    width:15px;
+    height:15px;  
+    position: absolute;
+    right: 42%;
+  }
+  
+  .containt{
+    display: none; 
+    margin-top: 20px;
+    width: 100%;
+    height: auto;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+
+ 
+  #testdiv{
+    margin-left: 2%;
+    width: 70%;
+    padding-top: 2px;
+   
+
+}
+
+#refer{
+    margin-left: 0px;
+    font-size: 13px;
+    margin-top: -10px;
+}
 
 
 /* 
